data/all_generated_tests/raw_wast_tests/br_if_IncorrectBranchTargetResolution_1393.wast
;; 4. **Test: Forward Branch to Block with Insufficient Operands**:    - **Description**: Create a block structure where `br_if` aims to branch forward to a block with less than needed operands on the stack.    - **Constraint Checked**: Validates that the target block's output type dictates the required operands on the stack.    - **Relation to Incorrect Branch Target Resolution**: Checks that the engine correctly prevents invalid branch resolutions due to a lack of operands, ensuring accurate control flow maintenance.

(assert_invalid
  (module
    (func $forward_branch_insufficient_operands
      (block (result i32)
        (i32.const 1)
        (br_if 0 (i32.const 1))
        (i32.const 2)
      )
    )
  )
  "type mismatch"
)